--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
 	},
 	"devDependencies": {
 		"@nuxt/devtools": "latest",
-		"prettier": "^3.0.2"
+		"prettier": "^3.0.2",
+		"sass": "^1.66.1"
 	},
 	"dependencies": {
+		"@pinia/nuxt": "^0.4.11",
+		"axios": "^1.5.0",
 		"nuxt": "^3.7.0",
-		"sass": "^1.66.1",
+		"pinia": "^2.1.6",
+		"uuid": "^9.0.0",
 		"vuetify": "^3.3.14"
+	},
+	"overrides": {
+		"vue": "latest"
 	}
 }
