--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-	"name": "nuxt-app",
-	"private": true,
-	"scripts": {
-		"build": "nuxt build",
-		"dev": "nuxt dev",
-		"generate": "nuxt generate",
-		"preview": "nuxt preview",
-		"postinstall": "nuxt prepare"
-	},
-	"devDependencies": {
-		"@nuxt/devtools": "latest",
-		"prettier": "^3.0.2",
-		"sass": "^1.66.1"
-	},
-	"dependencies": {
-		"@pinia/nuxt": "^0.4.11",
-		"axios": "^1.5.0",
-		"nuxt": "^3.7.0",
-		"pinia": "^2.1.6",
-		"uuid": "^9.0.0",
-		"vuetify": "^3.3.14"
-	},
-	"overrides": {
-		"vue": "latest"
-	}
+  "name": "nuxt-app",
+  "private": true,
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
+    "test": "vitest --coverage --ui"
+  },
+  "devDependencies": {
+    "@nuxt/devtools": "latest",
+    "@vitest/coverage-istanbul": "^0.34.3",
+    "@vitest/ui": "^0.34.3",
+    "jsdom": "^22.1.0",
+    "prettier": "^3.0.2",
+    "sass": "^1.66.1"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
+    "@vue/test-utils": "^2.4.1",
+    "axios": "^1.5.0",
+    "nuxt": "^3.7.0",
+    "pinia": "^2.1.6",
+    "unplugin-auto-import": "^0.16.6",
+    "uuid": "^9.0.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.34.3",
+    "vue-test-utils": "^1.0.0-beta.11",
+    "vuetify": "^3.3.14"
+  },
+  "overrides": {
+    "vue": "latest"
+  }
 }
